fix: properly display company banner without cropping

--- a/app/events/[id]/page.module.scss
+++ b/app/events/[id]/page.module.scss
@@ -3,7 +3,6 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 0;
 }
 
 .banner {
